--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/patient_icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Kolesa"
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         tools:targetApi="31">
 
+        <!-- WELCOME PAGE SETTINGS -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -25,6 +26,15 @@
             </intent-filter>
         </activity>
 
+        <!-- LOGIN PAGE SETTINGS-->
+        <activity android:name=".MainPage"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
