--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31" >
         <activity
-            android:name=".HomePage"
+            android:name=".MyDocuments"
             android:exported="false"
             android:label="@string/title_activity_home_page" />
         <activity
